[gd_scene load_steps=2 format=3 uid="uid://ck2oj6rog80e"]

[ext_resource type="Script" path="res://ui/LorePanel.gd" id="1_1"]

[node name="LorePanel" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.1, 0.95)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0

[node name="TitleLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Entity Lore"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ContentLabel" type="RichTextLabel" parent="VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = ""
bbcode_enabled = true

[node name="CloseButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Close"

